--- a/frontend/smartHouseFront/package.json
+++ b/frontend/smartHouseFront/package.json
@@ -10,16 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
+    "@angular/animations": "^18.2.13",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.2.12",
     "@angular/forms": "^18.0.0",
+    "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.7",
+    "ng2-charts": "^7.0.0",
+    "ngx-chartjs": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
